8295319: pending_cards_at_gc_start doesn't include cards in thread buffers

Reviewed-by: iwalulya, tschatzl